--- a/SERVICE/SERVICE.csproj
+++ b/SERVICE/SERVICE.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Entity\ENTITY.csproj" />
   </ItemGroup>
 
