--- a/WEB/WEB.csproj
+++ b/WEB/WEB.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Npm" Version="3.5.2" />
     <PackageReference Include="NToastNotify" Version="8.0.0" />
   </ItemGroup>
 
